src/test/deca/context/valid/created/miscellaneous/instanceof.deca
// Description :
//		Programme qui test tout les cas valides de instanceof
//
// Resultats :
//		Ok

class A {
}
{
A a;
a instanceof A;
null instanceof A;
}