src/test/deca/context/invalid/created/object/equals_boolean_null.deca
// Description :
//    test equals entre un boolean et un null
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: 
class A{}
{
boolean a;
null b;
int c = a.equal(b);
}
